Fix spacing issues for navbar

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -11,26 +11,7 @@ a {
 }
 
 .button-block {
-    font-family: "Source Code Pro", monospace;
-    background:
-        linear-gradient(black, black) padding-box,
-        linear-gradient(110deg, #df71ef, 68%, #22f0e7) border-box;
-    position: relative;
-    width: 50px;
-    height: auto;
-    padding-top: 0.6rem;
-    padding-bottom: 0.7rem;
-    padding-inline: 1rem;
-    margin: 10% auto;
-    margin-right: 1rem;
-    border-radius: 5px;
-    border: 2px solid transparent;
-    transition: transform 1s;
-    display: flex;
-    font-size: 1.1rem;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
+    display: none;
 }
 
 @media (min-width: 1024px) {
