--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -8,14 +8,15 @@
     margin: 0 auto;
 }
 
-/* Phones is 480 but just in case 400*/
-@media screen and (min-width: 400px) {
-    .faq-item {
-        width: 85%;
-    }
+#faq > h1 {
+    font-size: 30px;
 }
 
-@media screen and (min-width: 1025px) {
+.faq-item {
+    width: 85%;
+}
+
+@media (min-width: 1024px) {
     .faq-item {
         width: 30.5%;
     }
